--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ script:
 
 deploy:
   - provider: script
+    skip_cleanup: true
     script: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD && docker push $IMAGE:latest && docker push $IMAGE:$TRAVIS_COMMIT
     on:
       branch: master
