--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ addons:
 services:
   - docker
 
-
 env:
   global:
     - GO111MODULE=on
@@ -27,3 +26,9 @@ deploy:
     script: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD && docker push $IMAGE:latest && docker push $IMAGE:$TRAVIS_COMMIT
     on:
       branch: master
+  - provider: script
+    skip_cleanup: true
+    script: curl -sL https://git.io/goreleaser | bash
+    on:
+      tags: true
+      condition: $TRAVIS_OS_NAME = linux
